vaultwarden/k8s/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vaultwarden.xs4some.nl`)
      kind: Rule
      services:
        - name: vaultwarden
          port: 80
  tls:
    certResolver: letsencrypt
